--- a/blacboxtest.html
+++ b/blacboxtest.html
@@ -4,12 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Professional assignment services for students. Get expert help for your assignments.">
-    <meta name="keywords" content="assignment, academic help, writing services, college, university">
-    <meta name="author" content="RiteshNagpal">
-
     <title>assignPro | Ace Your Assignments with Professional Help</title>
-    <link rel="stylesheet" href="finalStyle.css">
+    <link rel="stylesheet" href="blackboxStyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
         integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -62,9 +58,9 @@
             </div>
 
 
-            <!--WhatsApp JS  -->
-            <!--  -->
-            <!--  -->
+            <!--WhatsApp JS -->
+            <!-- -->
+            <!-- -->
             <script>
                 function openWhatsApp() {
                     // Replace '123456789' with the actual phone number you want to chat with
@@ -77,9 +73,9 @@
                     window.open(whatsappURL, '_blank');
                 }
             </script>
-            <!--  -->
-            <!--  -->
-            <!--  -->
+            <!-- -->
+            <!-- -->
+            <!-- -->
 
 
             <div class="main2">
