--- a/test.html
+++ b/test.html
@@ -1,90 +1,189 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - codingnepalweb.com -->
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="UTF-8">
-   <title> All Navigation Menu Hover Animation | CodingLab </title> 
-    <link rel="stylesheet" href="style.css">
-    <style>/* Google Fonts Import Link */
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-        *{
-          margin: 0;
-          padding: 0;
-          box-sizing: border-box;
-          font-family: 'Poppins', sans-serif;
-        }
-        body{
-          height: 100vh;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          background: #c1f7f5;
-        }
-        .nav-links{
-          display: flex;
-          align-items: center;
-          background: #fff;
-          padding: 20px 15px;
-          border-radius: 12px;
-          box-shadow: 0 5px 10px rgba(0,0,0,0.2);
-        }
-        .nav-links li{
-          list-style: none;
-          margin: 0 12px;
-        }
-        .nav-links li a{
-          position: relative;
-          color: #333;
-          font-size: 20px;
-          font-weight: 500;
-          padding: 6px 0;
-          text-decoration: none;
-        }
-        .nav-links li a:before{
-          content: '';
-          position: absolute;
-          bottom: 0;
-          left: 0;
-          height: 3px;
-          width: 0%;
-          background: #34efdf;
-          border-radius: 12px;
-          transition: all 0.4s ease;
-        }
-        .nav-links li a:hover:before{
-          width: 100%;
-        }
-        .nav-links li.center a:before{
-          left: 50%;
-          transform: translateX(-50%);
-        }
-        .nav-links li.upward a:before{
-          width: 100%;
-          bottom: -5px;
-          opacity: 0;
-        }
-        .nav-links li.upward a:hover:before{
-          bottom: 0px;
-          opacity: 1;
-        }
-        .nav-links li.forward a:before{
-          width: 100%;
-          transform: scaleX(0);
-          transform-origin: right;
-          transition: transform 0.4s ease;
-        }
-        .nav-links li.forward a:hover:before{
-          transform: scaleX(1);
-          transform-origin: left;
-        }</style>
-   </head>
-<body>
-  <ul class="nav-links">
-    <li><a href="#">Dashboard</a></li>
-    <li class="center"><a href="#">Portfolio</a></li>
-    <li class="upward"><a href="#">Services</a></li>
-    <li class="forward"><a href="#">Feedback</a></li>
-  </ul>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>assignPro | Ace Your Assignments with Professional Help</title>
+  <link rel="stylesheet" href="test.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+    integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <style>
+    body {
+      /* background-color: grey; */
+    }
+  </style>
+</head>
+
+<body>
+  <div>
+    <header>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="#">Home</a></li>
+          <li class="center"><a href="#">Services</a></li>
+          <li class="center"><a href="#">Pricing</a></li>
+          <li class="center"><a href="#">Contact-us</a></li>
+          <li class="center"><a href="#">About us</a></li>
+        </ul>
+      </nav>
+    </header>
+    <br>
+
+    <section class="intro bodyCenter">
+      <div class="main1">
+        <p class="firstHalf">
+          AssignPro: Where Expertise Meets Excellence
+        </p>
+        <div class="secondHalf">
+          AssignPro delivers precision-crafted assignments, empowering students on their <br>
+          academic journey. Elevate your success with our commitment to excellence.
+        </div>
+        <div class="thirdhalf">
+          <button class="whatsapp-container" onclick="openWhatsApp()">
+            <i class="fa-brands fa-whatsapp"></i><i class="fa-brands fa-whatsapp fa-beat fa-2xl">
+              &nbsp;&nbsp;</i> Chat via WhatsApp
+          </button>
+
+          <button class="call-container">
+            <i class="fa-solid fa-phone fa-shake"></i>
+            <a href="tel:">&nbsp;&nbsp;Call Now</a> <!-- Write Phone number-->
+          </button>
+        </div>
+      </div>
+
+      <div class="main2">
+        <img src="./assests/Main.jpg" alt="Could not load image">
+      </div>
+    </section>
+
+    <section class="bodyCenter">
+      <p>Welcome to AssignPro</p>
+      <div class="img"></div>
+      <div class="img"></div>
+      <div class="img"></div>
+    </section>
+
+    <section class="services bodyCenter" id="services">
+      <h2>Our Services</h2>
+      <div class="serviceSection">
+        <div class="services-list">
+          <div class="service-card">
+            <p>Coding</p>
+            <img src="assests/Coding1.jpg" alt="">
+          </div>
+          <div class="service-card">
+            <p>Content Writing</p>
+            <img src="./assests/Content-Marketing.jpg" alt="">
+          </div>
+          <div class="service-card">
+            <p>Article Writing</p>
+            <img src="assests/services3.jpg" alt="">
+          </div>
+        </div>
+
+        <div class="services-list">
+          <h1 style="color:white;">Web services</h1>
+          <div class="service-card">
+            <p>Web Content services</p>
+            <img src="assests/webservices1.jpg" alt="">
+          </div>
+          <div class="service-card">
+            <p>SEO content Writing</p>
+            <img src="assests/webservice2.jpg" alt="">
+          </div>
+          <div class="service-card">
+            <p>Blog Writing Services</p>
+            <img src="assests/webservice3.jpg" alt="">
+          </div>
+        </div>
+
+        <div class="services-list">
+          <h1 style="color:white;">Business services</h1>
+          <div class="service-card">
+            <p>Business writing</p>
+            <img src="assests/business1.jpg" alt="">
+          </div>
+          <div class="service-card">
+            <p>Social Content writing</p>
+            <img src="assests/business2.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <hr>
+
+    <section class="bodyCenter">
+      <h2>Why you should buy from us</h2>
+      <div class="whyUs">
+        <div class="box">
+          <img src="./assests/check.png" alt="">
+          <h3>Guarantee</h3>
+          <p>At assignPro, we guarantee that our assignments are original, well-researched, and
+            plagiarism-free. We
+            provide a guarantee on all our work. If for any reason you are not satisfied with the final
+            product,
+            we will make it</p>
+        </div>
+        <div class="box">
+          <img src="assests/book-stack.png" alt="">
+          <h3>Uniqueness</h3>
+          <p>At assignPro, we don’t just sell assignments. We create custom solutions that match your specific
+            needs and preferences. Our writers are experts in various fields and can handle any topic or
+            level
+            of difficulty.</p>
+        </div>
+        <div class="box">
+          <img src="assests/group.png" alt="">
+          <h3>Experienced staff</h3>
+          <p>We are a team of experienced and professional writers who have been in the academic writing
+            industry
+            for more than 5 years. We have helped thousands of students achieve their academic goals by
+            delivering original, well-written, and timely assignments. Our clients appreciate our
+            dedication,
+            reliability, and attention to detail.</p>
+        </div>
+        <div class="box">
+          <img src="assests/handShake2.png" alt="">
+          <h3>Trustworthy</h3>
+          <p>We are a team of experienced writers who have worked in various industries and understand the
+            intricacies of your business.</p>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="bodyCenter footerPart">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="/aboutus">About Us</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="/contactus">Contact Us</a></li>
+          <li><a href="termsandcondition">Terms and Condition</a></li>
+        </ul>
+        <ul>
+          <li class="footerAction">
+            <button class="whatsapp-container" onclick="openWhatsApp()">
+              <i class="fa-brands fa-whatsapp fa-beat fa-2xl">
+                &nbsp;&nbsp;</i> Chat via WhatsApp
+            </button>
+
+            <button class="call-container">
+              <i class="fa-solid fa-phone fa-shake"></i>
+              <a href="tel:">&nbsp;&nbsp;Call Now</a> <!-- Write Phone number-->
+            </button>
+          </li>
+        </ul>
+      </div>
+    </footer>
+
+    <div class="lastfooter ">
+      <p class="bodyCenter">&copy; 2023 assignPro. All rights reserved.</p>
+    </div>
+  </div>
 </body>
+
 </html>
