Mostly style is done

--- a/indexFinal.html
+++ b/indexFinal.html
@@ -83,65 +83,63 @@
 
 
             <div class="main2">
-                <img src="./assests/Main.jpg" alt="Could not load image">
+                <!-- <img src="./assests/Main.jpg" alt="Could not load image"> -->
+                <img src="Designer.png" alt="">
+
             </div>
         </section>
 
 
 
-        <section class="bodyCenter">
-            <p>Welcome to AssignPro</p>
-            <div class="img"></div>
-            <div class="img"></div>
-            <div class="img"></div>
+        <section class="content bodyCenter">
+            <h2>Get Expertly Crafted Assignments for Academic Success</h2>
+            <p>Save Time and Effort by Outsourcing Your Assignments to Professionals</p>
+            <p>At AssignPro, we understand the challenges that college and university students face when it comes to completing their assignments. The pressure of multiple deadlines, complex subjects, and heavy workloads can be overwhelming. That's why we are here to help.</p>
         </section>
 
-
+        <hr>    
 
         <section class="services bodyCenter" id="services">
             <h2>Our Services</h2>
-            <h1 style="color:white;">Acadmic Services</h1>
             <div class="serviceSection">
                 <div class="services-list">
                     <div class="service-card">
-                        <p>Coding</p>
                         <img src="assests/Coding1.jpg" alt="">
+                        <p>Coding</p>
                     </div>
                     <div class="service-card">
-                        <p>Content Writing</p>
                         <img src="./assests/Content-Marketing.jpg" alt="">
+                        <p>Content Writing</p>
                     </div>
                     <div class="service-card">
-                        <p>Article Writing</p>
                         <img src="assests/services3.jpg" alt="">
+                        <p>Article Writing</p>
                     </div>
                 </div>
 
-                <h1 style="color:rgb(255, 255, 255);">Web services</h1>
                 <div class="services-list">
                     <div class="service-card">
-                        <p>Web Conetent services</p>
                         <img src="assests/webservices1.jpg" alt="">
+                        <p>Web Conetent services</p>
                     </div>
                     <div class="service-card">
-                        <p>SEO content Writing</p>
                         <img src="assests/webservice2.jpg" alt="">
+                        <p>SEO content Writing</p>
                     </div>
                     <div class="service-card">
-                        <p>Blog Writing Services</p>
                         <img src="assests/webservice3.jpg" alt="">
+                        <p>Blog Writing Services</p>
                     </div>
                 </div>
 
-                <h1 style="color:rgb(255, 255, 255);">Business services</h1>
                 <div class="services-list">
                     <div class="service-card">
-                        <p>Business writing</p>
                         <img src="assests/business1.jpg" alt="">
+                        <p>Business writing</p>
                     </div>
                     <div class="service-card">
-                        <p>Social Content writing</p>
                         <img src="assests/business2.jpg" alt="">
+                        <p>Social Content writing</p>
                     </div>
                     <div>
 
@@ -153,7 +151,7 @@
         <hr>
 
         <section class="bodyCenter">
-            <h2>Why you should buy from us</h2>
+            <h2 class="whyUsHeading bodyCenter">Why you should buy from us</h2>
             <div class="whyUs">
                 <div class="box">
                     <img src="./assests/check.png" alt="">
@@ -200,6 +198,7 @@
                     <li><a href="/aboutus">About Us</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="/contactus">Contact Us</a></li>
+                    <li><a href="">Privacy Policy</a></li>
                     <li><a href="termsandcondition">Terms and Condition</a></li>
                 </ul>
                 <ul>
@@ -208,14 +207,24 @@
                            <i class="fa-brands fa-whatsapp fa-beat fa-2xl">
                                 &nbsp;&nbsp;</i> Chat via WhatsApp
                         </button>
-    
                         <button class="call-container">
                             <i class="fa-solid fa-phone fa-shake"></i>
-                            <a href="tel:">&nbsp;&nbsp;Call Now</a> <!-- Write Phone number-->
+                            <a href="tel:">&nbsp;&nbsp;</a>Call now <!-- Write Phone number-->
+                        </button>
+                        <button class="mail-container">
+                            <i class="fas fa-mail-bulk"></i>
+                            <a href="mailto:">&nbsp;&nbsp;</a>Mail-Us<!--Write mail id-->
+                            
                         </button>
 
                         <!-- to amintain space -->
                     </li>
+                </ul>
+                <ul>
+                    <h2>Social</h2>
+                    <li> <i class="fa fa-facebook" aria-hidden="true"></i> </li>
+                    <li> <i class="fa fa-instagram" aria-hidden="true"></i> </li>
+
                 </ul>
             </div>
 
@@ -230,3 +239,7 @@
 </body>
 
 </html>
+
+
+
+<!-- You will see remove services list service card 30% Take a look at black shrink -->
