--- a/temp.html
+++ b/temp.html
@@ -1,110 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"    integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
-        .services {
-            margin-block: 5rem;
-        }
-
-        .services h2 {
-            text-align: center;
-            font-size: xxx-large;
-            margin-bottom: 3rem;
-        }
-
-        .serviceSection {
-            display: flex;
-            gap: 1rem;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            gap: 5vw;
-        }
-
-        .services-list {
-            display: flex;
-            flex-direction: row;
-            padding: 60px;
-            gap: 1rem;
+        ul{
+            list-style: none;
             justify-content: space-around;
         }
-
-        .service-card {
-            /* padding: 1rem; */
-            width: 20vw;
-            border-radius: 5px;
-            border: 1px solid #000000;
-            box-shadow: 2px 10px 10px grey;
-            transition: all .3s ease-in-out;
+        ul li a{
+            text-decoration: none;
+            color: black;
+            margin-inline: 2rem;
         }
-
-        .service-card img {
-            max-width: 100%;
-            border-radius: 5px;
+        .flex{
+            display: flex;
+            align-items: center;
         }
-
-        .service-card p {
-            font-size: large;
-            text-align: center;
-            padding: 20px;
+        nav{
+            justify-content: space-between;
+            width: 100%;
         }
-
-        .bodyCenter {
-            margin-inline: 8vw 8vw;
+        @media screen and(max-width:990px) {
+            
         }
     </style>
 </head>
-
 <body>
-    <br><br><br><br>
-    <hr>
-
-    <section class="services bodyCenter" id="services">
-        <h2>Our Services</h2>
-        <div class="serviceSection">
-            <div class="service-card">
-                <img src="assests/Coding1.jpg" alt="">
-                <p>Coding</p>
-            </div>
-            <div class="service-card">
-                <img src="./assests/Content-Marketing.jpg" alt="">
-                <p>Content Writing</p>
-            </div>
-            <div class="service-card">
-                <img src="assests/services3.jpg" alt="">
-                <p>Article Writing</p>
-            </div>
-
-            <div class="service-card">
-                <img src="assests/webservices1.jpg" alt="">
-                <p>Web Conetent services</p>
-            </div>
-            <div class="service-card">
-                <img src="assests/webservice2.jpg" alt="">
-                <p>SEO content Writing</p>
-            </div>
-            <div class="service-card">
-                <img src="assests/webservice3.jpg" alt="">
-                <p>Blog Writing Services</p>
-            </div>
-
-            <div class="service-card">
-                <img src="assests/business1.jpg" alt="">
-                <p>Business writing</p>
-            </div>
-            <div class="service-card">
-                <img src="assests/business2.jpg" alt="">
-                <p>Social Content writing</p>
-            </div>
-            <div>
-
-
-            </div>
+    
+    <nav class="flex">
+        <a href=""><img src="assests/logo-removebg-preview.png"  style="width: 100px;"></a>
+        <div class="nav-links">
+            <ul class="flex">
+                <li><a href="">Home1</a></li>
+                <li><a href="">Home2</a></li>
+                <li><a href="">Home3</a></li>
+                <li><a href="">Home4</a></li>
+                <li><a href="">Home5</a></li>
+            </ul>
         </div>
-    </section>
+        <!-- <a href="" class="nav-toggle">
+            <i class="fa-solid fa-bars fa-2xl"></i>
+        </a> -->
+    </nav>
 </body>
-
 </html>
