--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Professional assignment services for students. Get expert help for your assignments.">
-    <meta name="keywords" content="assignment, academic help, writing services, college, university">
+    <meta name="description" content="Professional assignment services for students and writing services. Get expert help for your assignments.">
+    <meta name="keywords" content="assignment, academic help, writing services, college, university,">   <!--SEO-->
     <meta name="author" content="RiteshNagpal">
 
     <title>assignPro | Ace Your Assignments with Professional Help</title>
-    <link rel="stylesheet" href="finalStyle.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
         integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
 
     <style>
@@ -31,9 +30,9 @@
         <nav>
             <div class="main-nav  flex">
                 <div class="logo">
-                    <a href="index.html"><img src="assests/logo-removebg-preview.png" alt=""></a>
+                    <a href="index.html"><img src="assests/logo-removebg-preview.png" alt="AssignPro"></a>
                 </div>
-    
+
                 <div class="flex">
                     <ul class="nav-links flex" id="nav-links">
                         <li><a href="#" class="hover-links"> Products </a></li>
@@ -53,11 +52,11 @@
     </header>
 
 
-    <section class="intro ">
+    <main class="intro ">
         <div class="main1">
-            <p class="firstHalf">
+            <h1 class="firstHalf">
                 AssignPro: Where Expertise Meets Excellence
-            </p>
+            </h1>
             <div class="secondHalf">
                 AssignPro delivers precision-crafted assignments, empowering students on their <br>
                 academic journey. Elevate your success with our commitment to excellence.
@@ -78,16 +77,8 @@
             </div>
         </div>
 
-
-
-
-
-        <!-- <div class="main2">
-            <img src="./assests/Main.jpg" alt="Could not load image">
-        </div> -->
-
-        <img class="main2" src="MainINTRO.png" alt="">
-    </section>
+        <img class="main2" src="MainINTRO.png" alt="AssignPro&#58; Where Expertise Meets Excellence">
+    </main>
 
 
 
@@ -106,37 +97,37 @@
         <div class="serviceSection">
             <div class="service-card">
                 <img src="assests/Coding1.jpg" alt="">
-                <p>Coding</p>
+                <h3>Coding</h3>
             </div>
             <div class="service-card">
                 <img src="./assests/Content-Marketing.jpg" alt="">
-                <p>Content Writing</p>
+                <h3>Content Writing</h3>
             </div>
             <div class="service-card">
                 <img src="assests/services3.jpg" alt="">
-                <p>Article Writing</p>
+                <h3>Article Writing</h3>
             </div>
 
             <div class="service-card">
                 <img src="assests/webservices1.jpg" alt="">
-                <p>Web Conetent services</p>
+                <h3>Web Conetent services</h3>
             </div>
             <div class="service-card">
                 <img src="assests/webservice2.jpg" alt="">
-                <p>SEO content Writing</p>
+                <h3>SEO content Writing</h3>
             </div>
             <div class="service-card">
                 <img src="assests/webservice3.jpg" alt="">
-                <p>Blog Writing Services</p>
+                <h3>Blog Writing Services</h3>
             </div>
 
             <div class="service-card">
                 <img src="assests/business1.jpg" alt="">
-                <p>Business writing</p>
+                <h3>Business writing</h3>
             </div>
             <div class="service-card">
                 <img src="assests/business2.jpg" alt="">
-                <p>Social Content writing</p>
+                <h3>Social Content writing</h3>
             </div>
 
         </div>
@@ -144,7 +135,7 @@
 
 
 
-    <section class="question">
+    <article class="question">
         <div class="commomQuestion">
             <span>FAQ</span>
             <h3>Common questions</h3>
@@ -172,7 +163,7 @@
                 payment gateways.
                 You can choose the most convenient option during the checkout process.</p>
         </div>
-    </section>
+    </article>
 
 
 
@@ -231,7 +222,7 @@
 
 
     <footer>
-        <img class="footerCard" src="assests/logo-removebg-preview.png" alt="logo">
+        <a href="indexFinal.html"><img class="footerCard" src="assests/logo-removebg-preview.png" alt="AssignPro"></a>
         <ul class="footerCard">
             <li><a href="#"> Home</a></li>
             <li><a href="/aboutus">About Us</a></li>
@@ -277,8 +268,9 @@
 
     </div>
 
-<script src="script.js"></script>    
+    <script src="script.js"></script>
 </body>
+
 </html>
 
 
